# redpanda

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
redpanda/: CMakeLists.txt  makefile
redpanda/include/: redpanda.h
redpanda/include/redpanda/: application.h  core.h  entryPoint.h  log.h
redpanda/src/: CMakeLists.txt  application.cpp  log.cpp
sandbox/: CMakeLists.txt  makefile
sandbox/src/: CMakeLists.txt  main.cpp
